# bubble-data-api-client

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
src/bubble_data_api_client/: __init__.py  config.py  constraints.py  exceptions.py  http_client.py  main.py  models.py  pagination.py  pool.py  transport.py  types.py  validation.py
src/bubble_data_api_client/client/: orm.py  raw_client.py
src/tests/: conftest.py
src/tests/integration/: test_orm.py  test_raw_client.py
src/tests/unit/: test_constraints.py  test_pagination.py  test_pool.py  test_transport.py  test_validation.py
src/tests/unit/client/: test_create_or_update.py  test_orm.py  test_raw_client.py  test_scan.py
