[project]
name = "bubble-data-api-client"
version = "0.4.1"
description = "Python client for Bubble Data API"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx[http2]~=0.28",
    "pydantic~=2.12",
    "tenacity~=9.1",
]

[project.urls]
Homepage = "https://github.com/bubble-python/bubble-data-api-client"

[dependency-groups]
dev = [
    "coverage~=7.10",
    "pytest~=9.0",
    "pytest-asyncio~=1.1",
    "ruff~=0.12",
    "respx~=0.22",
    "python-dotenv~=1.2.1",
    "ipython~=9.5",
    "pre-commit~=4.5",
    "pyright~=1.1.407",
    "pypistats~=1.7",
]

# ruff configuration
[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F", "I", "FAST", "ASYNC", "TRY", "PERF", "UP", "FURB", "A", "B", "S", "C4", "PIE", "RUF", "TC"]
ignore = ["RUF022"]

[tool.ruff.lint.per-file-ignores]
"src/tests/**/*.py" = ["S101"]
"*/test_*.py" = ["S101"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["pydantic.validate_call"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
# measure branch coverage in addition to line coverage
branch = true
# only measure the library code (excludes tests and dependencies)
source = ["src/bubble_data_api_client"]

[tool.coverage.report]
show_missing = true
